test/langtools/tools/javac/lambda/methodReference/MethodRefStuckParenthesized.out
MethodRefStuckParenthesized.java:25:5: compiler.err.prob.found.req: (compiler.misc.infer.no.conforming.instance.exists: X, MethodRefStuckParenthesized.J, MethodRefStuckParenthesized.I)
- compiler.note.compressed.diags
1 error
